Fixes wrapping of pre tags in the stream

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -797,6 +797,7 @@
 		pre {
 			padding: 0;
 			background: none;
+			white-space: pre-wrap;
 		}
 		code {
 			border: 1px solid @base-border-color;
